# MID_Backend

./: .gitignore  CMakeLists.txt  README.md  main.cc  vcpkg.json
controllers/: AuthController.cpp  AuthController.h  CommercialController.cpp  CommercialController.h  EmployeeController.cpp  EmployeeController.h  FinanceController.cpp  FinanceController.h  ProductCatalogController.cpp  ProductCatalogController.h  ProjectController.cpp  ProjectController.h  RolesController.cpp  RolesController.h  SupplierController.cpp  SupplierController.h
controllers/RawMaterialControllers/: MetalMaterialController.cc  MetalMaterialController.h
db/migrations/: 001_create_users.sql  002_commercial_module.sql  003_rrhh_and_project_members.sql  004_project_products.sql  005_rrhh_extended.sql  006_rrhh_complete.sql
docs/auth/: login.md
docs/commercial/: types.ts
docs/rrhh/: types.ts
models/: Client.cc  Client.h  Supplier.cpp  Supplier.h  User.cpp  User.h
models/commercial/: Client.cpp  Client.h  ProductCatalog.cpp  ProductCatalog.h  ProductRequest.cpp  ProductRequest.h  Project.cpp  Project.h  ProjectProduct.cpp  ProjectProduct.h
models/cutting/: CutRequest.h  TubeAllocation.h
models/rawMaterial/: MetalMaterial.cc  MetalMaterial.h  MetalSheet.h
models/rrhh/: Employee.cpp  Employee.h  EmployeeAbsence.cpp  EmployeeAbsence.h  EmployeeDependent.cpp  EmployeeDependent.h  EmployeeDisciplinary.cpp  EmployeeDisciplinary.h  EmployeeDocument.cpp  EmployeeDocument.h  EmployeeEducation.cpp  EmployeeEducation.h  EmployeeEmergencyContact.cpp  EmployeeEmergencyContact.h  EmployeePosition.cpp  EmployeePosition.h  EmployeeTraining.cpp  EmployeeTraining.h  EmployeeVacation.cpp  EmployeeVacation.h  EmployeeWorkHistory.cpp  EmployeeWorkHistory.h  Role.cpp  Role.h
utils/: Adress.cc  Adress.h  CryptoUtils.cpp  CryptoUtils.h  Database.cpp  Database.h  FirebaseClient.cpp  FirebaseClient.h  JwtUtils.cpp  JwtUtils.h  PgConnection.cpp  PgConnection.h
